<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_filter_hd_black"
        android:title="@string/title_guides" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/places_ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_star_black"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_offline_pin_black"
        android:title="@string/title_saved_guides" />
</menu>
