<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/list_guide_iv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@drawable/placeholder_guide_image"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/list_guide_track_color_iv"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/red_a200"/>

        <TextView
            android:id="@+id/list_guide_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            app:layout_constraintLeft_toRightOf="@id/list_guide_iv"
            app:layout_constraintRight_toLeftOf="@id/list_guide_track_color_iv"
            app:layout_constraintTop_toTopOf="@id/list_guide_iv"
            tools:text="@string/list_guide_title_text"/>

        <TextView
            android:id="@+id/list_guide_rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="@id/list_guide_title_tv"
            app:layout_constraintTop_toBottomOf="@id/list_guide_title_tv"
            tools:text="@string/list_guide_rating_text"/>

        <TextView
            android:id="@+id/list_guide_reviews_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_horizontal_margin"
            app:layout_constraintLeft_toRightOf="@id/list_guide_rating_tv"
            app:layout_constraintBaseline_toBaselineOf="@id/list_guide_rating_tv"
            tools:text="@string/list_guide_reviews_text"/>

        <TextView
            android:id="@+id/list_guide_distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/list_guide_rating_tv"
            tools:text="@string/list_guide_distance_text"/>

        <TextView
            android:id="@+id/list_guide_author_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/list_guide_title_tv"
            app:layout_constraintTop_toBottomOf="@id/list_guide_rating_tv"
            tools:text="Author: "/>

        <TextView
            android:id="@+id/list_guide_author_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/list_guide_author_label_tv"
            app:layout_constraintTop_toBottomOf="@id/list_guide_rating_tv"
            tools:text="@string/list_author_text"/>

        <TextView
            android:id="@+id/list_guide_difficulty_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/list_guide_author_label_tv"
            tools:text="@string/list_guide_difficulty_text"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/grey_400" />

    </android.support.constraint.ConstraintLayout>
</layout>