<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/list_guide_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@{vm.title}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextAppearance.AppCompat.Subhead"
        tools:text="The Quintessential Hike"/>

    <TextView
        android:id="@+id/list_guide_trail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/text_vertical_margin"
        android:text="@{vm.trailName}"
        style="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_guide_title_tv"
        tools:text="@string/list_guide_title_text"/>

    <TextView
        android:id="@+id/list_guide_area_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{vm.areaName}"
        style="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="@id/list_guide_trail_tv"
        app:layout_constraintTop_toBottomOf="@id/list_guide_trail_tv"
        tools:text="@string/list_area_text"/>

    <TextView
        android:id="@+id/list_guide_distance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@{vm.distance}"
        style="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/list_guide_area_tv"
        tools:text="@string/list_guide_distance_text"/>

    <TextView
        android:id="@+id/list_guide_rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{vm.rating}"
        style="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="@id/list_guide_title_tv"
        app:layout_constraintTop_toBottomOf="@id/list_guide_area_tv"
        tools:text="@string/list_guide_rating_text"/>

    <TextView
        android:id="@+id/list_guide_reviews_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginStart="@dimen/text_horizontal_margin"
        android:text="@{vm.reviews}"
        style="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toEndOf="@id/list_guide_rating_tv"
        app:layout_constraintBaseline_toBaselineOf="@id/list_guide_rating_tv"
        tools:text="@string/list_guide_reviews_text"/>

    <TextView
        android:id="@+id/list_guide_difficulty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{vm.difficulty}"
        style="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="@id/list_guide_distance_tv"
        app:layout_constraintBaseline_toBaselineOf="@id/list_guide_rating_tv"
        tools:text="@string/list_guide_difficulty_text"/>

    <ImageView
        android:id="@+id/list_guide_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/card_vertical_padding"
        app:image="@{vm.image}"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_guide_rating_tv"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/placeholder_guide_image"
        />

</android.support.constraint.ConstraintLayout>